# Oriens

./: .gitignore
back-end/: Cargo.toml  data.json
back-end/migrations/: 001_users_table.sql  002_favorites_table.sql  003_password_reset_tokens_table.sql  004_quiz_table.sql
back-end/src/: api.rs  database.rs  main.rs  models.rs
front-end/: index.html  lib-jitsi-meet.min.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
front-end/src/: App.vue  main.ts
front-end/src/assets/: main.css
front-end/src/components/: CardJob.vue  GroupCardJob.vue  HeaderHomeView.vue  InfiniteScroll.vue  JitsiMeet.vue  Questionnaire.vue
front-end/src/components/button/: OriensButton.vue
front-end/src/components/jobs/: CardJob.vue  GroupCardJob.vue
front-end/src/components/layout/: Footer.vue  HeaderHomeView.vue
front-end/src/composables/: auth.ts  jobs.ts  questionnaire.ts  questionnaire.txt  user.ts
front-end/src/router/: index.ts
front-end/src/stores/: useAuth.ts  useJobs.ts  useQuiz.ts  useUsers.ts
front-end/src/views/: CallVideoView.vue  HomeView.vue  SignInView.vue
front-end/src/views/auth/: ForgotPasswordView.vue  LogInView.vue  SignUpView.vue
front-end/src/views/dashboard/: DashboardView.vue  ParentDashboardView.vue
front-end/src/views/jobs/: JobsView.vue
front-end/src/views/layout/: TheLayoutView.vue
front-end/src/views/survey/: EndQuiz.vue  Questionnaire.vue  ResultQuiz.vue  StartQuiz.vue
