[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = {version="1.42.0",features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
bcrypt = "0.10"
chrono = "0.4.39"
tower-http = {version="0.6.2",features=["cors"]}
actix-web = "4.9.0"


