[package]
name = "back-end"
version = "0.1.0"
edition = "2021"
default-run = "back-end"

[dependencies]
axum = {version="0.8.1",features=["macros"]}
tokio = {version="1.42.0",features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
bcrypt = "0.10"
chrono = "0.4.39"
tower-http = {version="0.6.2",features=["cors"]}
actix-web = "4.9.0"
quick-xml = {version="0.37.2",features=["serialize","overlapped-lists"]}
anyhow = "1.0.95"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "any",
    "postgres",
    "uuid",
    "chrono",
    "time",
    "bigdecimal",
] }
reqwest = {version="0.12.12",features = ["json"]}
mistralai-client = "0.14.0"
dotenv = "0.15.0"
uuid = {version="1.16.0", features = ["v7","fast-rng","macro-diagnostics","serde"] }
rand = "0.9.1"
sha2 = "0.10.9"
base64 = "0.22.1"
lettre = {version= "0.11.17",features = ["native-tls", "smtp-transport", "builder"]}





